# fastApiProject

./: .gitignore  Makefile  pyproject.toml
src/: .env  config_db.py  database.py
src/api/: consumer.py  containers.py  main.py  rabbit_utils.py
src/celery/: celery.py  config_celery.py  containers.py
src/chat/: containers.py  endpoints.py  models.py  repository.py  schemas.py  services.py
src/ibay/: consumer.py  containers.py  endpoints.py  models.py  repository.py  schemas.py  services.py  tasks.py
src/ibay/ibay_utils/: check_delivery.py
src/parser/: parser.py  parser_socket.py  receiver.py  tasks.py  utils.py
src/socketio/: client.py  sockets.py
src/users/: config_user.py  containers.py  endpoints.py  main.py  models.py  permissions.py  repository.py  requests.py  schemas.py  services.py  tasks.py  utils.py
src/utils/: get_token_from_cookie.py
src/wallet/: api.py  config_wallet.py  consumer.py  containers.py  endpoints.py  models.py  repository.py  requests.py  services.py  tasks.py  utils.py
src/wallet/wallet_utils/: transaction_create.py  transaction_save.py  transaction_search.py  wallet_balance.py  wallet_search.py
tests/: conftest.py
