[tool.poetry]
name = "fastapiproject"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.1"
uvicorn = "^0.23.2"
pydantic = {extras = ["email"], version = "^2.1.1"}
loguru = "^0.7.0"
sqlalchemy = "^2.0.19"
dependency-injector = {extras = ["yaml"], version = "^4.41.0"}
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.7"
asyncpg = "^0.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
